@@ -55,7 +55,7 @@
         <commons.validator.version>1.4.0</commons.validator.version>
         <httpcomponents.version>4.3.4</httpcomponents.version>
         <tomcat.version>7.0.54</tomcat.version>
-        <httl.version>1.0.12-SNAPSHOT</httl.version>
+        <httl.version>1.0.11-SNAPSHOT</httl.version>
         <jericho.version>3.3</jericho.version>
         <guava.version>17.0</guava.version>
         <jetty.version>9.2.1.v20140609</jetty.version>
@@ -166,6 +166,18 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <!--<useSystemClassLoader>true</useSystemClassLoader>
+                    <forkMode>always</forkMode>
+                    <argLine>-Xms128m -Xmx1024m -XX:PermSize=64m -XX:MaxPermSize=256m</argLine>-->
+                    <failIfNoTests>false</failIfNoTests>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
     <dependencyManagement>
@@ -244,7 +256,7 @@
                 </exclusions>
             </dependency>
             <dependency>
-                <groupId>com.github.httl</groupId>
+                <groupId>softmotions</groupId>
                 <artifactId>httl</artifactId>
                 <version>${httl.version}</version>
             </dependency>
